corregir error de imagen calentador-electrico-de-agua-de-50-L

--- a/index.html
+++ b/index.html
@@ -1179,10 +1179,10 @@
   {
     "id": "prod-116",
     "nombre": "Calentador Eléctrico de Agua 50L",
-    "marca": "https://i.postimg.cc/QdwYJNyC/calentador-electrico-de-agua-de-50-L.jpg",
+    "marca": "",
     "categoria": "calentadores",
     "descripcion": "Domicilio GRATIS. 3 meses de garantía.",
-    "imagen": "",
+    "imagen": "https://i.postimg.cc/QdwYJNyC/calentador-electrico-de-agua-de-50-L.jpg",
     "precio": 330,
     "comision": 3000,
     "rating": 4.5,
