corregir error de imagen cemento-perlagris

--- a/index.html
+++ b/index.html
@@ -1359,10 +1359,10 @@
   {
     "id": "prod-131",
     "nombre": "Cemento PerlaGris",
-    "marca": "https://i.postimg.cc/fb3nMg6t/cemento-perlagris.jpg",
+    "marca": "",
     "categoria": "construccion",
     "descripcion": "Venta mínima 10 bolsas.",
-    "imagen": "",
+    "imagen": "https://i.postimg.cc/fb3nMg6t/cemento-perlagris.jpg",
     "precio": 8800,
     "comision": 150,
     "rating": 4.5,
