Actualizar precios de productos y agregar funcionalidad de selección de moneda

--- a/index.html
+++ b/index.html
@@ -1348,7 +1348,7 @@ Lo que necesitas para tu familia a la distancia de un clic"
           descripcion: "No tiene garantía.",
           imagen:
             "https://i.postimg.cc/pVJ7MHpc/olla-reina-milexus-de-6-L-90min.jpg",
-          precio: 22500,
+          precio: 60.81,
           comision: 800,
           rating: 4.5,
           garantia: "No",
@@ -1360,7 +1360,7 @@ Lo que necesitas para tu familia a la distancia de un clic"
           categoria: "cocina",
           descripcion: "Domicilio gratis. Sin garantía.",
           imagen: "https://i.postimg.cc/85hY58w5/batidora-con-picatodo.jpg",
-          precio: 11000,
+          precio: 29.72,
           comision: 500,
           rating: 4.5,
           garantia: "No",
@@ -1385,7 +1385,7 @@ Lo que necesitas para tu familia a la distancia de un clic"
           categoria: "cocina",
           descripcion: "1 mes de garantía.",
           imagen: "https://i.postimg.cc/vmxjJxV5/fogon-infrarrojo-jmd.jpg",
-          precio: 21000,
+          precio: 56.75,
           comision: 1000,
           rating: 4.5,
           garantia: "1 mes",
@@ -1411,7 +1411,7 @@ Lo que necesitas para tu familia a la distancia de un clic"
           descripcion: "Para todo tipo de fogón. Domicilio gratis.",
           imagen:
             "https://i.postimg.cc/Gm5VgxHc/olla-de-pres-n-de-3-valvulas-maca-eko.jpg",
-          precio: 13000,
+          precio: 35.13,
           comision: 750,
           rating: 4.5,
           garantia: "",
@@ -1436,7 +1436,7 @@ Lo que necesitas para tu familia a la distancia de un clic"
           categoria: "cocina",
           descripcion: "",
           imagen: "https://i.postimg.cc/6p3Fhm6j/cafetera-marca-moka.jpg",
-          precio: 14500,
+          precio: 39.18,
           comision: 500,
           rating: 4.5,
           garantia: "",
@@ -1460,7 +1460,7 @@ Lo que necesitas para tu familia a la distancia de un clic"
           categoria: "construccion",
           descripcion: "Venta mínima 10 bolsas.",
           imagen: "https://i.postimg.cc/fb3nMg6t/cemento-perlagris.jpg",
-          precio: 8800,
+          precio: 23.78,
           comision: 150,
           rating: 4.5,
           garantia: "",
@@ -1473,7 +1473,7 @@ Lo que necesitas para tu familia a la distancia de un clic"
           descripcion:
             "Capacidad: 1.8L / 20 tazas. Recipiente interior de aluminio con revestimiento antiadherente. Tapa de cristal templado. Potencia: 700W. Incluye paleta de arroz y taza para medir. Color: Plateado.",
           imagen: "https://i.postimg.cc/kXcdsSQ4/olla-arrocera-mara-eko.jpg",
-          precio: 13000,
+          precio: 35.13,
           comision: 1000,
           rating: 4.5,
           garantia: "",
@@ -1485,7 +1485,7 @@ Lo que necesitas para tu familia a la distancia de un clic"
           categoria: "cocina",
           descripcion: "Capacidad: 350 ml.",
           imagen: "https://i.postimg.cc/D0Q3tJRx/espumera-de-cafe-baroness.jpg",
-          precio: 5000,
+          precio: 13.51,
           comision: 500,
           rating: 4.5,
           garantia: "",
@@ -1529,19 +1529,165 @@ Lo que necesitas para tu familia a la distancia de un clic"
           rating: 4.5,
           garantia: "",
         },
+        {
+          id: "prod-137",
+          nombre: "Refrigerador 7.5 pies",
+          marca: "Lemax",
+          categoria: "refrigeracion",
+          descripcion: "Congelación seca. 3 meses de garantía.",
+          imagen: "https://i.postimg.cc/T2zKgd69/refrigerador-lemax-de-7-5-pies.jpg", // Agrega URL de imagen si la tienes
+          precio: 480,
+          comision: 5000,
+          garantia: "3 meses",
+          rating: 4.5
+        },
+        {
+          id: "prod-138",
+          nombre: "SMART TV 50\"",
+          marca: "Wynwood",
+          categoria: "tv",
+          descripcion: "Con cajita interna. 1 mes de garantía.",
+          imagen: "https://i.postimg.cc/ZndhJzsY/Smart-TV-Marca-Royal-De-55-Pulgadas.jpg", // Agrega URL de imagen si la tienes
+          precio: 520,
+          comision: 5000,
+          garantia: "1 mes",
+          rating: 4.5
+        },
+        {
+          id: "prod-139",
+          nombre: "SMART TV 55\"",
+          marca: "Royal",
+          categoria: "tv",
+          descripcion: "1 mes de garantía.",
+          imagen: "https://i.postimg.cc/Hj11xvFw/Smart-TV-De-50-Pulgadas-Marca-Wynwood-Con-Cajita-Interna.jpg", // Agrega URL de imagen si la tienes
+          precio: 560,
+          comision: 5000,
+          garantia: "1 mes",
+          rating: 4.5
+        },
+        {
+          id: "prod-140",
+          nombre: "Colchón de espuma importado 200x140x10 cm",
+          marca: "",
+          categoria: "colchones",
+          descripcion: "Alta densidad, confort, resistencia y versatilidad.",
+          imagen: "https://i.postimg.cc/B6y0Wngw/Colchones-De-Espuma-Importados-De-Alta-Densidad-Confort.jpg", // Agrega URL de imagen si la tienes
+          precio: 140,
+          comision: 2000,
+          garantia: "",
+          rating: 4.5
+        },
+        {
+          id: "prod-141",
+          nombre: "Colchón Camero 1.50x1.90",
+          marca: "Confork",
+          categoria: "colchones",
+          descripcion: "De muelles y esponja.",
+          imagen: "https://i.postimg.cc/XvsW88yW/Colchon-Camero-Marca-Confork-De-Muelles-Y-Esponja.jpg", // Agrega URL de imagen si la tienes
+          precio: 200,
+          comision: 2000,
+          garantia: "",
+          rating: 4.5
+        },
+        {
+          id: "prod-142",
+          nombre: "Ventilador recargable de pedestal 18\"",
+          marca: "JMD",
+          categoria: "climatizacion",
+          descripcion: "Con batería de litio, potencia 20W, voltaje 110V, puerto USB, lámpara incorporada. Funciona con electricidad y batería interna. El color puede variar. Si compra 1 unidad le llegará sin caja, si compra 2 unidades le llegará en su caja.",
+          imagen: "https://i.postimg.cc/ZR0SDdrd/Ventilador-Recargable-De-Pedestal-De-18-Marca-JMD.jpg", // Agrega URL de imagen si la tienes
+          precio: 72,
+          comision: 2000,
+          garantia: "",
+          rating: 4.5
+        },
       ];
 
-      // Variables globales para el filtro y la búsqueda
+      // Variables globales para el filtro, la búsqueda y la moneda
 let filtroActual = "todos";
 let busquedaActual = "";
+let monedaActual = "USD";
+let tasas = {
+  USD: 1,
+  CUP: 370,
+  EUR: 1.08, // ejemplo, puedes actualizarlo dinámicamente
+};
+
+// Función para obtener tasas desde El Toque (asíncrona)
+async function obtenerTasas() {
+  try {
+    const url = "https://eltoque.com/tasas-de-cambio-de-moneda-en-cuba-hoy#formal-diaria";
+    const response = await fetch(url);
+    const html = await response.text();
+    const parser = new DOMParser();
+    const doc = parser.parseFromString(html, "text/html");
+    // Aquí debes ajustar los selectores según la estructura real de la página
+    // Ejemplo: buscar la tasa informal USD/CUP
+    const tasaInformal = doc.querySelector('[data-currency="usd"][data-market="informal"] .exchange-rate-value');
+    console.log({tasaInformal});
+    
+    if (tasaInformal) {
+      tasas.CUP = parseFloat(tasaInformal.textContent.replace(/[^\d.]/g, ""));
+    }
+    // Puedes agregar más monedas aquí si lo deseas
+  } catch (e) {
+    console.warn("No se pudieron actualizar las tasas automáticamente. Usando valores por defecto.");
+  }
+}
+
+function renderizarSelectorMoneda() {
+  const contenedor = document.getElementById("selector-moneda-container");
+  contenedor.innerHTML = `
+    <label for="selector-moneda" style="margin-right:8px; font-weight:500;">Moneda:</label>
+    <select id="selector-moneda" style="padding:6px 12px; border-radius:8px; border:1px solid #ddd;">
+      ${Object.keys(tasas)
+        .map(
+          (mon) => `<option value="${mon}"${mon === monedaActual ? " selected" : ""}>${mon}</option>`
+        )
+        .join("")}
+    </select>
+  `;
+  document.getElementById("selector-moneda").addEventListener("change", function () {
+    monedaActual = this.value;
+    renderizarProductos(filtroActual, busquedaActual);
+  });
+}
+
+function formatearPrecio(precioUSD) {
+  const tasa = tasas[monedaActual] || 1;
+  let precioConvertido = precioUSD * tasa;
+  let simbolo = "";
+  switch (monedaActual) {
+    case "USD":
+      simbolo = "$";
+      break;
+    case "CUP":
+      simbolo = "CUP $";
+      break;
+    case "EUR":
+      simbolo = "€";
+      break;
+    default:
+      simbolo = monedaActual + " $";
+  }
+  // Mostrar 2 decimales solo para USD/EUR, sin decimales para CUP
+  if (monedaActual === "CUP") {
+    precioConvertido = Math.round(precioConvertido);
+  } else {
+    precioConvertido = precioConvertido.toFixed(2);
+  }
+  return `${simbolo}${precioConvertido}`;
+}
 
 function renderizarProductos(filtro = "todos", busqueda = "") {
+  filtroActual = filtro;
+  busquedaActual = busqueda;
   const grid = document.getElementById("products-grid");
   grid.innerHTML = "";
   let productosFiltrados =
     filtro === "todos"
-      ? productos
-      : productos.filter((p) => p.categoria === filtro);
+      ? productos.slice().reverse() // Mostrar los más nuevos primero
+      : productos.filter((p) => p.categoria === filtro).reverse();
   if (busqueda && busqueda.trim() !== "") {
     const texto = busqueda.trim().toLowerCase();
     productosFiltrados = productosFiltrados.filter(
@@ -1583,10 +1729,10 @@ function renderizarProductos(filtro = "todos", busqueda = "") {
           <div class="product-price">
             ${
               producto.precioViejo
-                ? `<span class='old-price'>$${producto.precioViejo}</span>`
+                ? `<span class='old-price'>${formatearPrecio(producto.precioViejo)}</span>`
                 : ""
             }
-            <span class="current-price">$${producto.precio}</span>
+            <span class="current-price">${formatearPrecio(producto.precio)}</span>
           </div>
           <button class="btn-add-to-cart" data-id="${producto.id}">
             <i class="fas fa-cart-plus"></i> Añadir al carrito
@@ -1869,7 +2015,17 @@ function manejarFiltros() {
         });
       }
       // Modifico la inicialización para renderizar filtros antes de productos
-      document.addEventListener("DOMContentLoaded", function () {
+      document.addEventListener("DOMContentLoaded", async function () {
+        await obtenerTasas();
+        // Insertar el selector de moneda arriba de los filtros
+        const filtros = document.getElementById("product-filters");
+        const selectorDiv = document.createElement("div");
+        selectorDiv.id = "selector-moneda-container";
+        selectorDiv.style.display = "flex";
+        selectorDiv.style.justifyContent = "flex-end";
+        selectorDiv.style.marginBottom = "10px";
+        filtros.parentNode.insertBefore(selectorDiv, filtros);
+        renderizarSelectorMoneda();
         renderizarFiltros();
         renderizarProductos();
         manejarFiltros();
@@ -1877,12 +2033,12 @@ function manejarFiltros() {
         actualizarContadorOfertas();
 
         const searchBar = document.getElementById("search-bar");
-  searchBar.addEventListener("input", function () {
-    const texto = searchBar.value;
-    const btn = document.querySelector(".filter-btn.active");
-    const filtro = btn ? btn.getAttribute("data-category") : "todos";
-    renderizarProductos(filtro, texto);
-  });
+        searchBar.addEventListener("input", function () {
+          const texto = searchBar.value;
+          const btn = document.querySelector(".filter-btn.active");
+          const filtro = btn ? btn.getAttribute("data-category") : "todos";
+          renderizarProductos(filtro, texto);
+        });
       });
     </script>
     <!-- =================== FIN SCRIPTS =================== -->
