--- a/index.html
+++ b/index.html
@@ -1609,7 +1609,7 @@ let busquedaActual = "";
 let monedaActual = "USD";
 let tasas = {
   USD: 1,
-  CUP: 370,
+  CUP: 385,
   EUR: 1.08, // ejemplo, puedes actualizarlo dinámicamente
 };
 
@@ -2039,7 +2039,80 @@ function manejarFiltros() {
           const filtro = btn ? btn.getAttribute("data-category") : "todos";
           renderizarProductos(filtro, texto);
         });
+
+        manejarClickTarjetasProducto();
       });
+
+      // Modal para detalles de producto
+function crearModalProducto() {
+  if (document.getElementById('modal-producto')) return;
+  const modal = document.createElement('div');
+  modal.id = 'modal-producto';
+  modal.style.position = 'fixed';
+  modal.style.top = '0';
+  modal.style.left = '0';
+  modal.style.width = '100vw';
+  modal.style.height = '100vh';
+  modal.style.background = 'rgba(0,0,0,0.7)';
+  modal.style.display = 'flex';
+  modal.style.alignItems = 'center';
+  modal.style.justifyContent = 'center';
+  modal.style.zIndex = '2000';
+  modal.style.visibility = 'hidden';
+  modal.style.opacity = '0';
+  modal.style.transition = 'opacity 0.2s';
+  modal.innerHTML = `
+    <div id="modal-producto-content" style="background:white; border-radius:12px; max-width:95vw; max-height:90vh; overflow:auto; box-shadow:0 8px 32px rgba(0,0,0,0.2); position:relative; padding:32px 24px 24px 24px;">
+      <button id="cerrar-modal-producto" style="position:absolute; top:12px; right:16px; background:none; border:none; font-size:2rem; color:#888; cursor:pointer;">&times;</button>
+      <div id="modal-producto-body"></div>
+    </div>
+  `;
+  document.body.appendChild(modal);
+  document.getElementById('cerrar-modal-producto').onclick = function() {
+    modal.style.opacity = '0';
+    setTimeout(()=>{modal.style.visibility = 'hidden';}, 200);
+  };
+  modal.onclick = function(e) {
+    if (e.target === modal) {
+      modal.style.opacity = '0';
+      setTimeout(()=>{modal.style.visibility = 'hidden';}, 200);
+    }
+  };
+}
+
+function mostrarModalProducto(producto) {
+  crearModalProducto();
+  const modal = document.getElementById('modal-producto');
+  const body = document.getElementById('modal-producto-body');
+  body.innerHTML = `
+    <div style="display:flex; flex-wrap:wrap; gap:32px; align-items:center; justify-content:center;">
+      <img src="${producto.imagen}" alt="${producto.nombre}" style="max-width:350px; width:100%; border-radius:10px; box-shadow:0 2px 12px rgba(0,0,0,0.08); background:#f3f4f6; max-height:70vh; object-fit:contain;">
+      <div style="flex:1; min-width:250px;">
+        <h2 style="margin-bottom:10px;">${producto.nombre}</h2>
+        <p style="color:#6b7280; font-size:1.1rem; margin-bottom:10px;"><b>Marca:</b> ${producto.marca || 'Sin marca'}</p>
+        <p style="margin-bottom:10px;">${producto.descripcion}</p>
+        <p style="margin-bottom:10px;"><b>Garantía:</b> ${producto.garantia || 'No especificada'}</p>
+        <p style="margin-bottom:10px;"><b>Comisión:</b> ${producto.comision ? formatearPrecio(producto.comision) : 'No aplica'}</p>
+        <p style="margin-bottom:10px; font-size:1.3rem;"><b>Precio:</b> <span style="color:#2563eb;">${formatearPrecio(producto.precio)}</span></p>
+        <button class="btn-add-to-cart" data-id="${producto.id}" style="margin-top:10px; width:auto;">Añadir al carrito</button>
+      </div>
+    </div>
+  `;
+  modal.style.visibility = 'visible';
+  modal.style.opacity = '1';
+}
+
+// Añadir evento a las tarjetas de producto
+function manejarClickTarjetasProducto() {
+  document.getElementById('products-grid').addEventListener('click', function(e) {
+    const card = e.target.closest('.product-card');
+    if (card && !e.target.classList.contains('btn-add-to-cart')) {
+      const id = card.querySelector('.btn-add-to-cart').getAttribute('data-id');
+      const producto = productos.find(p => p.id === id);
+      if (producto) mostrarModalProducto(producto);
+    }
+  });
+}
     </script>
     <!-- =================== FIN SCRIPTS =================== -->
   </body>
