Agregar modo aleatorio para tarjetas y mejorar estilos con botón de opciones

--- a/flashcards/index.html
+++ b/flashcards/index.html
@@ -10,6 +10,9 @@
     <div id="app">
         <h1>Tarjetas de Estudio</h1>
         <div id="counter">Tarjeta 1 de 55</div>
+        <div class="options">
+            <button id="randomMode">Modo Aleatorio: OFF</button>
+        </div>
         <div class="card-container">
             <div class="card" id="card">
                 <div class="front">Cargando...</div>
