Mover slideshow a vaera/ y actualizar lista de imágenes

--- a/index.html
+++ b/index.html
@@ -1,113 +1,3 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BlasterDP - Portafolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        header {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 50px 20px;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2.5em;
-        }
-        header p {
-            font-size: 1.2em;
-            margin: 10px 0 0;
-        }
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        .projects {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-            margin-top: 40px;
-        }
-        .project-card {
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            overflow: hidden;
-            transition: transform 0.3s;
-        }
-        .project-card:hover {
-            transform: translateY(-5px);
-        }
-        .project-card img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-        }
-        .project-card .content {
-            padding: 20px;
-        }
-        .project-card h3 {
-            margin: 0 0 10px;
-            color: #333;
-        }
-        .project-card p {
-            margin: 0 0 15px;
-            color: #666;
-        }
-        .project-card a {
-            display: inline-block;
-            background-color: #007bff;
-            color: white;
-            padding: 10px 20px;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-        .project-card a:hover {
-            background-color: #0056b3;
-        }
-        footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #333;
-            color: white;
-            margin-top: 40px;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>BlasterDP</h1>
-        <p>Desarrollador de Software | Ingeniero de Código</p>
-    </header>
-    <div class="container">
-        <h2>Mis Proyectos</h2>
-        <div class="projects">
-            <div class="project-card">
-                <img src="https://via.placeholder.com/300x200?text=ElectroHome" alt="ElectroHome">
-                <div class="content">
-                    <h3>ElectroHome</h3>
-                    <p>Tienda en línea de electrodomésticos con carrito de compras y envío por WhatsApp.</p>
-                    <a href="electrohome/">Ver Proyecto</a>
-                </div>
-            </div>
-            <div class="project-card">
-                <img src="https://via.placeholder.com/300x200?text=Religious+Spectrum" alt="Religious Spectrum">
-                <div class="content">
-                    <h3>Religious Spectrum</h3>
-                    <p>Aplicación interactiva para explorar el espectro religioso.</p>
-                    <a href="religious-spectrum/">Ver Proyecto</a>
-                </div>
-            </div>
             <div class="project-card">
                 <img src="https://via.placeholder.com/300x200?text=Flashcards" alt="Flashcards">
                 <div class="content">
@@ -116,11 +6,12 @@
                     <a href="flashcards/">Ver Proyecto</a>
                 </div>
             </div>
+            <div class="project-card">
+                <img src="https://via.placeholder.com/300x200?text=Slideshow" alt="Slideshow">
+                <div class="content">
+                    <h3>Slideshow</h3>
+                    <p>Presentación de imágenes en slideshow a tamaño completo.</p>
+                    <a href="vaera/">Ver Proyecto</a>
+                </div>
+            </div>
             <!-- Agrega más proyectos aquí -->
-        </div>
-    </div>
-    <footer>
-        <p>&copy; 2025 BlasterDP. Todos los derechos reservados.</p>
-    </footer>
-</body>
-</html>
