feat(portfolio): agregar tarjetas de proyecto para Parashá Vaerá y Día Bíblico
- Actualizar título y descripción de la tarjeta existente a "Parashá Vaerá"
- Agregar nueva tarjeta para "Día Bíblico" con enlace a dia_biblico/
- Crear directorio dia_biblico/ para el nuevo proyecto

--- a/index.html
+++ b/index.html
@@ -119,9 +119,17 @@
             <div class="project-card">
                 <img src="https://via.placeholder.com/300x200?text=Slideshow" alt="Slideshow">
                 <div class="content">
-                    <h3>Slideshow</h3>
-                    <p>Presentación de imágenes en slideshow a tamaño completo.</p>
+                    <h3>Parashá Vaerá</h3>
+                    <p>Presentación de imágenes en slideshow sobre Parashá Vaerá.</p>
                     <a href="vaera/">Ver Proyecto</a>
+                </div>
+            </div>
+            <div class="project-card">
+                <img src="https://via.placeholder.com/300x200?text=Slideshow" alt="Slideshow">
+                <div class="content">
+                    <h3>Día Bíblico</h3>
+                    <p>Presentación de imágenes en slideshow sobre día bíblico.</p>
+                    <a href="dia_biblico/">Ver Proyecto</a>
                 </div>
             </div>
             <!-- Agrega más proyectos aquí -->
