Adición de estudio_galatas con imágenes y actualización de index.html

--- a/index.html
+++ b/index.html
@@ -133,6 +133,14 @@
                 </div>
             </div>
             <div class="project-card">
+                <img src="https://picsum.photos/300/200?random=5" alt="Slideshow">
+                <div class="content">
+                    <h3>Estudio Gálatas</h3>
+                    <p>Presentación de imágenes en slideshow sobre gálatas.</p>
+                    <a href="estudio_galatas/">Ver Proyecto</a>
+                </div>
+            </div>
+            <div class="project-card">
                 <img src="https://picsum.photos/300/200?random=6" alt="Slideshow">
                 <div class="content">
                     <h3>Doccionario Strong</h3>
