agregar dos nuevos proyectos antitesis y cuestionarios

--- a/index.html
+++ b/index.html
@@ -140,6 +140,22 @@
                     <a href="parejas/">Ver Proyecto</a>
                 </div>
             </div>
+            <div class="project-card">
+                <img src="https://picsum.photos/300/200?random=8" alt="Antitesis">
+                <div class="content">
+                    <h3>Antitesis</h3>
+                    <p>Aplicación de antitesis en la biblia.</p>
+                    <a href="antitesis/">Ver Proyecto</a>
+                </div>
+            </div>
+            <div class="project-card">
+                <img src="https://picsum.photos/300/200?random=9" alt="Antitesis">
+                <div class="content">
+                    <h3>Cuestionarios</h3>
+                    <p>Aplicación de cuestionarios interactivos.</p>
+                    <a href="cuestionarios/">Ver Proyecto</a>
+                </div>
+            </div>
             <!-- Agrega más proyectos aquí -->
         </div>
     </div>
