Agrega el subproyecto 'calendario' al index principal y revisa subproyectos para reflejar nuevos archivos.

--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
                 </div>
             </div>
             <div class="project-card">
+                <img src="https://picsum.photos/300/200?random=10" alt="Calendario Bíblico">
+                <div class="content">
+                    <h3>Calendario Bíblico</h3>
+                    <p>Calendario interactivo de las festividades y fechas bíblicas (Moadim).</p>
+                    <a href="calendario/">Ver Calendario</a>
+                </div>
+            </div>
+            <div class="project-card">
                 <img src="https://picsum.photos/300/200?random=1" alt="ElectroHome">
                 <div class="content">
                     <h3>ElectroHome</h3>
