Actualiza el index de antitesis para mostrar los nuevos estudios agregados.

--- a/antitesis/index.html
+++ b/antitesis/index.html
@@ -40,6 +40,26 @@
                     <h3><a href="respuesta_sermon_monte.html">Respuesta al Sermón del Monte</a></h3>
                     <p>Un estudio detallado del Sermón del Monte y sus implicaciones.</p>
                 </div>
+                <div class="study-item">
+                    <h3><a href="estudio_pesaj_cronologia.html">Pesaj: Cronología Bíblica</a></h3>
+                    <p>Estudio sobre la cronología de Pesaj según la Biblia.</p>
+                </div>
+                <div class="study-item">
+                    <h3><a href="estudio_rosh_jodesh.html">Rosh Jodesh</a></h3>
+                    <p>Estudio sobre el significado y celebración de Rosh Jodesh.</p>
+                </div>
+                <div class="study-item">
+                    <h3><a href="fe_que_transforma.html">Fe que Transforma</a></h3>
+                    <p>Reflexión sobre el poder transformador de la fe bíblica.</p>
+                </div>
+                <div class="study-item">
+                    <h3><a href="lenguas_biblicas_vs_modernas.html">Lenguas Bíblicas vs Modernas</a></h3>
+                    <p>Comparativa entre lenguas bíblicas y lenguas modernas en el contexto espiritual.</p>
+                </div>
+                <div class="study-item">
+                    <h3><a href="mensaje_bendicion.html">Mensaje de Bendición</a></h3>
+                    <p>Estudio sobre el mensaje de bendición en la Biblia.</p>
+                </div>
             </section>
         </main>
         
