Add new study on Purim and Janucá, introduce Tetzavé quiz, and enhance presentation materials
- Updated index.html to include a new study item on Purim and Janucá.
- Added cuestionario-tetzave.json with 12 questions related to the parashá Tetzavé.
- Updated quizzes-list.json to include the new Tetzavé quiz.
- Modified script.js to include flashcards for Tetzavé in both general and children's categories.
- Enhanced CSS for modal presentation styles.
- Updated app.js to include a new presentation for Tetzavé with 15 slides.
- Added new slides (01.webp to 15.webp) for the Tetzavé presentation.
- Created flashcards for Tetzavé in both standard and children's formats.

--- a/antitesis/index.html
+++ b/antitesis/index.html
@@ -17,6 +17,10 @@
             <section class="studies-list">
                 <h2>Estudios Disponibles</h2>
                 <div class="study-item">
+                    <h3><a href="estudio_purim_januca.html">Estudio sobre Purim y Janucá</a></h3>
+                    <p>Un análisis sobre la perspectiva de Jazak VeEmats en estas fiestas.</p>
+                </div>
+                <div class="study-item">
                     <h3><a href="antitesis_clamor_divino.html">Antítesis del Clamor Divino</a></h3>
                     <p>Un análisis profundo sobre el clamor divino y su contraste con las doctrinas modernas.</p>
                 </div>
